--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="nl">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<meta name="robots" content="noindex,follow">
+        <link rel="stylesheet" href="css/stylesheet.css">
+		<title>
+			Opdracht 6
+		</title>
+	</head>
+	<body>
+	<div class="bgimg"></div>
+	<div id="container">
+		<figure>
+			
+		</figure>
+        <figure>
+			<img src="img/Alligator_Snapping_Turtle_An-gu-ry.jpg" alt="angry_turtle" title="angry_turtle" width="800" height="575">
+			<figcaption>ANGY Tutel</figcaption>
+		</figure>
+		<figure>
+			<img src="img/Alligator_Snapping_Turtle_Chilling.jpg" alt="turtle_chilling" title="turtle_chilling" width="800" height="458">
+			<figcaption>Tutel Bing Chilling</figcaption>
+		</figure>
+		<figure>
+			<img src="img/Alligator_Snapping_Turtle_vs_Common_Snapping_Turtle.jpg" alt="turtle_vs_turtle" title="turtle_vs_turtle" width="800" height="576">
+			<figcaption>Tutel VS Tutel</figcaption>
+		</figure>
+		<figure>
+			<img src="img/Alligator_Snapping_Turtle_vs_Energy_Drink.jpg" alt="turtle_vs_energy_drink" title="turtle_vs_energy_drink" width="800" height="576">
+			<figcaption>Tutel VS NRG Drink</figcaption>
+		</figure>
+		<figure>
+			<img src="img/Common_Snapping_Turtle_Close_Up.jpg" alt="close_up_turtle" title="close_up_turtle" width="800" height="600">
+			<figcaption>Tutel Close Up</figcaption>
+		</figure>
+		<figure>
+			<img src="img/Common_Snapping_Turtle_in_Minnesota.jpg" alt="turtle_in_minnesota" title="turtle_in_minnesota" width="800" height="644">
+			<figcaption>Tutel chilling in Minnesota</figcaption>
+		</figure>
+		<figure>
+			<img src="img/Common_Snapping_Turtle_Making_a_Friend.jpg" alt="turtle_making_a_friend" title="turtle_making_a_friend" width="800" height="493">
+			<figcaption>Tutel Frenn</figcaption>
+		</figure>
+		<figure>
+			<img src="img/Common_Snapping_Turtle_Smiling.jpg" alt="turtle_smiling" title="turtle_smiling" width="800" height="599">
+			<figcaption>Tutel Smilege</figcaption>
+		</figure>
+		<figure>
 
+		</figure>
+	</div>
+	</body>
+</html>
