--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 	<body>
 	<div class="bgimg"></div>
 	<div id="container">
-		<figure>
-			
-		</figure>
-        <figure>
+		<figure></figure>
+    <figure>
 			<img src="img/Alligator_Snapping_Turtle_An-gu-ry.jpg" alt="angry_turtle" title="angry_turtle" width="800" height="575">
 			<figcaption>ANGY Tutel</figcaption>
 		</figure>
